Correct a lot of spelling errors, re-arrange chapters, correct images and so on

--- a/doc/inc/10_introduction.tex
+++ b/doc/inc/10_introduction.tex
@@ -20,12 +20,12 @@ Darstellung also, die möglichst nahe an der menschlichen Wahrnehmung
 liegt.
 
 Im Laufe der Zeit entstanden verschiedene Ansätze um eine solche
-Darstellung zu bieten. Ein Teilgebiet davon sind Beleuchtungsmodelle,
+Darstellung zu erreichen. Ein Teilgebiet davon sind Beleuchtungsmodelle,
 welche die Beleuchtung einer Darstellung bzw.\ einer Szene berechnen.
 Dabei wird zwischen lokalen und globalen Beleuchtungsmodellen
 unterschieden.
 
-Ein globales Beleuchtungsmodell ist Ray Tracing (zu deutsch
+Ein globales Beleuchtungsmodell ist Ray Tracing (zu Deutsch
 Strahlenverfolgung), welches seine Urpsrünge in
 der~\citeyear{appel_techniques_1968}
 von~\citeauthor{appel_techniques_1968} vorgestellten
