--- a/doc/inc/20_administrative.tex
+++ b/doc/inc/20_administrative.tex
@@ -5,9 +5,11 @@
 \chapter{Administratives}
 \label{chap:20_administrative}
 
-Einige administrative Aspekte der Projektarbeit werden angesprochen, obwohl sie für das Verständnis der Resultate nicht notwendig sind.
+Einige administrative Aspekte der Projektarbeit werden angesprochen,
+obwohl sie für das Verständnis der Resultate nicht notwendig sind.
 
-Im gesamten Dokument wird nur die männliche Form verwendet, womit aber beide Geschlechter gemeint sind.
+Im gesamten Dokument wird nur die männliche Form verwendet, womit aber
+beide Geschlechter gemeint sind.
 
 \section{Beteiligte Personen}
 \label{sec:involved_persons}
@@ -32,7 +34,9 @@ Der Aufbau der vorliegenden Arbeit ist wie folgt:
     \item Verwendete Technologien
 \end{itemize}
 
-Der Schwerpunkt dieser Arbeit liegt in der Beschreibung der theoretischen Grundlagen (unter praktischen Aspekten) des Volume Ray Casting Verfahrens.
+Der Schwerpunkt dieser Arbeit liegt in der Beschreibung der
+theoretischen Grundlagen (unter praktischen Aspekten) des Volume Ray
+Casting Verfahrens.
 
 \section{Ergebnisse (Deliverables)}
 \label{sec:deliverables}
@@ -40,5 +44,10 @@ Der Schwerpunkt dieser Arbeit liegt in der Beschreibung der theoretischen Grundl
 Nachfolgend sind die abzugebenden Objekte aufgeführt:
 \begin{itemize}
     \item \textbf{Abschlussdokument} \\
-        Das Abschlussdokument beinhaltet die theoretischen Grundlagen (unter praktischen Aspekten) des Volume Ray Casting Verfahrens
+        Das Abschlussdokument beinhaltet die theoretischen Grundlagen
+        (unter praktischen Aspekten) des Volume Ray Casting Verfahrens.
+    \item \textbf{Protoyp} \\
+        Der Prototyp, welcher im Rahmen der Bearbeitung der Thematik
+        entstanden ist. Es handelt sich um eine praktische Umsetzung des
+        vorgestellten Verfahrens.
 \end{itemize}
