--- a/doc/inc/50/51_illumination_models.tex
+++ b/doc/inc/50/51_illumination_models.tex
@@ -5,11 +5,17 @@
 \section{Beleuchtungsmodelle}
 \label{sec:illumination_models}
 
-Sofern nicht anders vermerkt, basiert der folgende Abschnitt auf~\cite{whitted_improved_1980}[S. 343] sowie auf~\cite{hughes_computer_2013}.
+Sofern nicht anders vermerkt, basiert der folgende Abschnitt
+auf~\cite[S. 343]{whitted_improved_1980}, sowie
+auf~\cite{hughes_computer_2013}.
 
-Beleuchtungsmodelle beschreiben, wieviel Licht von einem sichtbaren Punkt einer Oberfläche zum Betrachter emitiert wird. In der Regel wird das Licht als Funktion in Abhängigkeit folgender Faktoren beschrieben:
+Beleuchtungsmodelle beschreiben, wieviel Licht von einem sichtbaren
+Punkt einer Oberfläche zum Betrachter emittiert wird. In der Regel wird
+das Licht als Funktion in Abhängigkeit folgender Faktoren beschrieben:
+
 \begin{itemize}
-    \item Richtung der Lichtquelle \item Lichstärke
+    \item Richtung der Lichtquelle
+    \item Lichtstärke
     \item Position des Betrachters
     \item Orientierung der Oberfläche
     \item Oberflächenbeschaffenheit
