--- a/doc/inc/50_theoretical_background.tex
+++ b/doc/inc/50_theoretical_background.tex
@@ -6,7 +6,7 @@
 \label{chap:theoretical_background}
 
 Sofern nicht anders vermerkt, basiert das folgende Kapitel
-auf~\cite{foley_computer_1996}.
+auf~\cite[S. 721ff]{foley_computer_1996}.
 
 Um überhaupt Bilder generieren und darstellen zu können, braucht es zwei
 Faktoren: Was dargestellt werden soll und wie es dargestellt werden soll.
@@ -17,7 +17,7 @@ bestimmten Punkt hat. Dabei haben sich die Begriffe des
 
 \citeauthor{foley_computer_1996} nutzt den Begriff \textit{shading model} als
 Überbegriff, welcher auch Beleuchtungsmodelle umfasst. Daher definiert ein
-\textit{shading model} wann ein Beleuchtungsmodell mit welchen
+\textit{shading model}, wann ein Beleuchtungsmodell mit welchen
 Parametern angewendet wird. So nutzen manche \textit{shading models} ein
 Beleuchtungsmodell für jeden Pixel, andere wiederum nur für einzelne Pixel und
 interpolieren dabei die Werte der anderen Pixel.
