--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -378,3 +378,43 @@ Die Demoszene ist im Wesentlichen auf Europa beschränkt; in den USA und in Asie
 	note = {Page Version ID: 149578258},
 	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/MMD4Q5R6/index.html:text/html}
 }
+
+@article{phong_illumination_1975,
+	title = {Illumination for {Computer} {Generated} {Pictures}},
+	volume = {18},
+	issn = {0001-0782},
+	url = {http://doi.acm.org/10.1145/360825.360839},
+	doi = {10.1145/360825.360839},
+	number = {6},
+	journal = {Commun. ACM},
+	author = {Phong, Bui Tuong},
+	month = jun,
+	year = {1975},
+	keywords = {computer graphics, graphic display, hidden surface removal, shading},
+	pages = {311--317}
+}
+
+@article{gouraud_continuous_1971,
+	title = {Continuous {Shading} of {Curved} {Surfaces}},
+	volume = {20},
+	issn = {0018-9340},
+	url = {http://dx.doi.org/10.1109/T-C.1971.223313},
+	doi = {10.1109/T-C.1971.223313},
+	number = {6},
+	journal = {IEEE Trans. Comput.},
+	author = {Gouraud, H.},
+	month = jun,
+	year = {1971},
+	keywords = {Coons patches, curved surfaces, halftone, hidden-line removal, shading.},
+	pages = {623--629}
+}
+
+@misc{brian_danchilla_beginning_2014,
+	title = {Beginning {WebGL} - {Chapter} 4 {Examples}},
+	url = {http://www.beginningwebgl.com/examples/chapter-4},
+	urldate = {2016-01-11},
+	author = {{Brian Danchilla}},
+	month = oct,
+	year = {2014},
+	file = {Beginning WebGL - Chapter 4 Examples:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/7QXT394V/chapter-4.html:text/html}
+}
