--- a/doc/inc/static/title.tex
+++ b/doc/inc/static/title.tex
@@ -16,8 +16,8 @@
     \end{picture}
 
     \begin{figure}[H]
-        \centering
-        \includegraphics[scale=0.6]{img/logo.png}
+        \hspace*{0.25cm}
+        \includegraphics{img/logo.pdf}
     \end{figure}
 
     \begin{picture}(150,2)
